# botornot-copy

./: .env.example  .prettierignore  README.md  compose.yml  index.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json
backend/: chatGPT.ts  prompts.ts  websocket.old.ts  websocket.ts
backend/controllers/: roomState_controller.ts  roomState_websockets.ts  sessions_controller.ts  users_controller.ts
backend/middleware/: authentication.ts  middleware.d.ts
backend/repositories/: roomState_repository.ts  users_repository.ts
backend/types/: types.d.ts  websockets.d.ts
backend/types/express/: index.d.ts
backend/utils/: chatGPT.ts  getPrompt.ts  jwt.d.ts  prompts.ts
bot-or-not/: package-lock.json  package.json
bot-or-not/src/: App.jsx  Display.jsx  Input.jsx
bot-or-not/src/components/: Responses.jsx
bot-or-not/src/utils/: api.js
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
client/src/: App.css  App.jsx  App.tsx  Display.jsx  Input.jsx  main.jsx  main.tsx  store.ts
client/src/botornot/: App.tsx
client/src/components/: Players.jsx  Players.tsx  Responses.jsx  Scoreboard.jsx
client/src/home/: HomeLayout.tsx
client/src/hooks/: useApi.js  useApi.ts  useCountdownTimer.js  useCountdownTimer.ts
client/src/old/: App.jsx
client/src/screens/: Awnsers.jsx  Choose.jsx  Display.jsx  Display.tsx  Enter.jsx  Enter.tsx  Host.jsx  Host.tsx  Introduction.jsx  Introduction.tsx  Join.jsx  Join.tsx  Player.tsx  (+6 more)
css-test/: index.css  index.html
prisma/: schema.prisma  seeds.ts
views/: index.handlebars
(+27 files in other folders)
