[tool.poetry]
name = "bot-or-not"
version = "0.1.0"
description = ""
authors = ["Jared Smith <smithvjared@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
npm = "^0.1.1"
vite = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
